--- a/src/components/ModalLogOut/style.css
+++ b/src/components/ModalLogOut/style.css
@@ -21,3 +21,7 @@
     border: solid orange;
     background-color: #481848;
 }
+
+.logout-btn {
+    border: solid #481848;
+}
